crates/rlp/tests/ui/enum_without_tagged.rs
use alloy_rlp::RlpEncodable;

#[derive(RlpEncodable)]
enum Bad {
    A,
}

fn main() {}
